# autrainer

./: .buildinfo  .coverage.SimonPC.3800.XmcQqGGx  .coverage.SimonPC.9664.XkjRtQdx  .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  api_test.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/development/: citing.doctree  contributing.doctree  reproducibility_guide.doctree
.doctrees/modules/: augmentations.doctree  core.doctree  criterions.doctree  dataset_utils.doctree  datasets.doctree  loggers.doctree  metrics.doctree  models.doctree  optimizers.doctree  postprocessing.doctree  schedulers.doctree  serving.doctree  training.doctree  transforms.doctree
.doctrees/usage/: cli_reference.doctree  cli_wrapper.doctree  hydra_configurations.doctree  quickstart.doctree  tutorials.doctree
.github/workflows/: CD.yaml  CI.yaml
.nix/: flake.nix
_modules/: index.html
_sources/development/: citing.rst.txt  contributing.rst.txt  reproducibility_guide.rst.txt
_sources/modules/: augmentations.rst.txt  core.rst.txt  criterions.rst.txt  datasets.rst.txt  loggers.rst.txt  models.rst.txt  optimizers.rst.txt  postprocessing.rst.txt  schedulers.rst.txt  serving.rst.txt  training.rst.txt  transforms.rst.txt
_sources/usage/: cli_reference.rst.txt  cli_wrapper.rst.txt  hydra_configurations.rst.txt  tutorials.rst.txt
_static/: external_links.js  pygments.css
autrainer/: __init__.py
autrainer-configurations/: _autrainer_.yaml  _autrainer_eval_.yaml  _autrainer_train_.yaml  _hydra_disable_logging_.yaml  config.yaml  eval.yaml  group.yaml
autrainer-configurations/augmentation/: AugMix.yaml  CutMix.yaml  FrequencyMask.yaml  GaussianBlur.yaml  GaussianNoise.yaml  MixUp.yaml  None.yaml  RandAugment-light.yaml  RandAugment-medium.yaml  RandAugment-strong.yaml  RandGrayscale.yaml  RandRotation.yaml  SampleGaussianWhiteNoise.yaml  SpecAugment.yaml  TimeMask.yaml  TimeShift.yaml  TimeWarp.yaml
autrainer-configurations/dataset/: AIBO-IS16-llds.yaml  AIBO-eGeMAPS-llds.yaml  AIBO-mel-16k.yaml  AIBO-mel-32k.yaml  AIBO-wav-pad.yaml  AIBO-wav.yaml  AudioSet-wav.yaml  DCASE2016Task1-16k.yaml  DCASE2016Task1-32k.yaml  DCASE2016Task1-wav-stm.yaml  DCASE2016Task1-wav.yaml  DCASE2017Task3-32k.yaml  DCASE2018Task3-wav-16k.yaml  DCASE2018Task3-wav.yaml  DCASE2019Task4-32k.yaml  DCASE2020Task1A-16k.yaml  DCASE2020Task1A-32k.yaml  DCASE2020Task1A-wav-16k.yaml  DCASE2020Task1A-wav.yaml  EDANSA2019-wav.yaml  EmoDB-32k.yaml  EmoDB-wav.yaml  MSPPodcast-EmoAct-wav.yaml  MSPPodcast-EmoClass-all-wav.yaml  MSPPodcast-EmoClass-big4-wav.yaml  MSPPodcast-EmoDims-wav-ccc.yaml  MSPPodcast-EmoDom-wav.yaml  MSPPodcast-EmoVal-wav.yaml  SpeechCommands-16k.yaml  SpeechCommands-32k.yaml  SpeechCommands-wav.yaml  ToyAudio-C.yaml  ToyAudio-MLC.yaml  ToyAudio-MTR.yaml  ToyAudio-R.yaml  ToyImage-C.yaml  ToyImage-MLC.yaml  ToyImage-MTR.yaml  ToyImage-R.yaml  ToySequential-C.yaml  (+4 more)
autrainer-configurations/model/: ASTModel-T.yaml  ASTModel.yaml  AlexNet-T.yaml  AlexNet.yaml  Cnn10-32k-T-online.yaml  Cnn10-32k-T.yaml  Cnn10.yaml  Cnn14-16k-T.yaml  Cnn14-32k-T.yaml  Cnn14.yaml  ConvNeXt-Base-T.yaml  ConvNeXt-Base.yaml  ConvNeXt-Large-T.yaml  ConvNeXt-Large.yaml  ConvNeXt-Small-T.yaml  ConvNeXt-Small.yaml  ConvNeXt-Tiny-T.yaml  ConvNeXt-Tiny.yaml  Crnn.yaml  DCASE2019-T4.yaml  Densenet-121-T.yaml  Densenet-121.yaml  EfficientNet-B0-T.yaml  EfficientNet-B0.yaml  EfficientNet-B1-T.yaml  EfficientNet-B1.yaml  EfficientNet-B2-T.yaml  EfficientNet-B2.yaml  EfficientNet-B3-T.yaml  EfficientNet-B3.yaml  EfficientNet-B4-T.yaml  EfficientNet-B4.yaml  EfficientNet-B5-T.yaml  EfficientNet-B5.yaml  EfficientNet-B6-T.yaml  EfficientNet-B6.yaml  EfficientNet-B7-T.yaml  EfficientNet-B7.yaml  EfficientNetV2-L-T.yaml  EfficientNetV2-L.yaml  (+157 more)
autrainer-configurations/optimizer/: ASGD.yaml  Adadelta.yaml  Adagrad.yaml  Adam.yaml  AdamW.yaml  Adamax.yaml  LBFGS.yaml  NAdam.yaml  RAdam.yaml  RMSprop.yaml  Rprop.yaml  SAM-SGD.yaml  SGD.yaml  SparseAdam.yaml
autrainer-configurations/plotting/: Default.yaml
autrainer-configurations/preprocessing/: ComParE_2016-llds.yaml  ComParE_2016.yaml  eGeMAPSv02-llds.yaml  eGeMAPSv02.yaml  log_mel_16k.yaml  log_mel_32k.yaml  log_mel_8k.yaml
autrainer-configurations/scheduler/: None.yaml  StepLR.yaml
autrainer/augmentations/: __init__.py  abstract_augmentation.py  augmentation_manager.py  augmentation_pipeline.py  augmentation_wrappers.py  choice_augmentation.py  image_augmentations.py  sequential_augmentation.py  spectrogram_augmentations.py  spectrogram_warp_utils.py  utils.py
autrainer/cli/: __init__.py
autrainer/criterions/: __init__.py  classification.py  criterion_wrappers.py  regression.py  utils.py
autrainer/datasets/: __init__.py  abstract_dataset.py  aibo.py  audb_wrapper.py  audioset.py  dcase_2016_t1.py  dcase_2017_t3.py  dcase_2018_t3.py  dcase_2019_t4.py  dcase_2020_t1a.py  edansa2019.py  emo_db.py  msppodcast.py  speech_commands.py  ssl_wrapper.py  toy_dataset.py
autrainer/loggers/: __init__.py  abstract_logger.py  fallback_logger.py  mlflow_logger.py  tensorboard_logger.py
autrainer/metrics/: __init__.py  abstract_metric.py  classification.py  multi_label_classification.py  regression.py  sed_metrics.py
development/: citing.html  contributing.html  reproducibility_guide.html
modules/: augmentations.html  core.html  criterions.html  dataset_utils.html  datasets.html  loggers.html  metrics.html  models.html  optimizers.html  postprocessing.html  schedulers.html  serving.html  training.html  transforms.html
tests/: __init__.py  test_augmentations.py  test_cli_wrapper.py  test_core_utils.py  test_criterions.py  test_dataset_utils.py  test_datasets.py  test_integration.py  test_loggers.py  test_metrics.py  test_models.py  test_optimizers.py  test_output_tracking.py  test_preprocessing.py  test_serving.py  test_transforms.py  utils.py
usage/: cli_reference.html  cli_wrapper.html  hydra_configurations.html  quickstart.html  tutorials.html
(+286 files in other folders)
